# agent-org-network

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  README.md  pyproject.toml  sqlite_source_binding_worker_v7.py
.claude/: settings.json
.claude/agents/: code-reviewer.md  domain-architect.md  mcp-runtime-engineer.md  planner.md  tdd-engineer.md
.codex/agents/: code-reviewer.toml  domain-architect.toml  mcp-runtime-engineer.toml  planner.toml  tdd-engineer.toml
.github/workflows/: ci.yml
demo-video/: DESIGN.md  index.html  meta.json  package.json  record_exec.py  serve_demo.py
demo-video/recordings-exec/: clip-a-ask.webm  clip-b-console.webm  clip-c-hitl.webm  clip-d-precedent.webm  clip-e-safety.webm
docs/: enterprise-readiness-2026-07-12.md  initial-planning.md  next-actions.md  pilot-runbook.md  plan-central-answering.md  prd-v0.md  scale-eval-2026-07-02.md  scenario.html  tasks-v0.md  trd-v0.md  trustgraph-eval-2026-07-06.md
docs/adr/: 0001-python-stack.md  0002-conflict-resolution-as-precedent-loop.md  0003-test-strategy-tdd-and-eval.md  0004-card-self-declares-conservatively-authority-is-central.md  0005-user-agent-ontology.md  0006-central-is-mcp-server.md  0007-agent-runtime-in-scope-walking-skeleton.md  0008-conflict-case-and-first-person-consensus.md  0009-personas-are-authenticated-separate-spaces.md  0010-agent-runtime-answers-via-owner-claude-code.md  0011-distributed-transport-reverse-outbound-worker-queue.md  0012-owner-delegated-backup-worker-availability.md  0013-okf-open-knowledge-format-owner-knowledge.md  0014-manager-queue-escalation-convergence.md  0015-intent-single-source-on-routing-decision.md  0016-passwordless-session-identity-and-operational-scope.md  0017-owner-is-governance-subject-not-execution-subject.md  0018-okf-bundle-git-storage-and-builder-commit-pipeline.md  0019-knowledge-freshness-and-change-propagation.md  0020-option-b-entry-decision-guide.md  0021-sso-oidc-identity-binding.md  0022-realtime-push-notification.md  0023-agent-id-wire-format-admission.md  0024-stateful-session-model.md  0025-hitl-runtime-toggle.md  0026-worker-admission-token.md  0027-multi-llm-oauth-provider-runtime.md  0028-published-knowledge-index-scale-routing.md  0029-okf-authoring-llm-wiki-staged-conversion.md  0030-owner-side-authoring-topology-and-cross-machine-fanout.md  0031-sse-token-streaming-seam-and-contract.md  0032-idempotent-okf-publish-and-semantic-dedup.md  0033-central-answering-and-knowledge-sync.md  0034-admin-ui-live-registry-and-ownership-transfer.md  0035-owner-scorecard-observability-not-appraisal.md  (+30 more)
frontend/: components.json  next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts
registry/: users.yaml
samples/: questions.jsonl  scale_questions.jsonl
scripts/: demo_backup.md  demo_cross_machine.md  demo_e2e.md  demo_e2e_provider.md  run_central.sh  run_mcp.sh  run_web.sh  run_worker.sh
tests/: conftest.py  test_6_6_iii_fixes.py  test_admin_registry.py  test_admin_users.py  test_admin_users_web.py  test_admin_web.py  test_adoption.py  test_agent_id_admission.py  test_answer_finalization_contract.py  test_answer_finalization_in_memory.py  test_answer_finalization_planner.py  test_answer_finalization_sqlite.py  test_answer_finalization_sqlite_concurrency.py  test_answer_finalization_sqlite_faults.py  test_answer_finalization_sqlite_schema.py  test_answer_record.py  test_app_storage_wiring.py  test_approval_boundary.py  test_approval_collaboration.py  test_approval_cross_channel.py  test_approval_evidence.py  test_approval_http.py  test_approval_mcp_server.py  test_approval_operations_decision.py  test_approval_operations_expiry.py  test_approval_operations_lifecycle.py  test_approval_operations_read.py  test_approval_retention.py  test_approval_retention_models.py  test_ask_org.py  test_audit.py  test_auth.py  test_author_routes.py  test_author_select.py  test_authoring_application.py  test_authoring_mcp_server.py  test_backup_review_integration.py  test_builder_okf_commit.py  test_central_answering.py  test_central_app_backup_review.py  (+216 more)
web/: admin.html  builder.html  console-feed.html  inbox.html  index.html  monitor.html  org.html  owner-drafts.html  owner-monitor.html
(+332 files in other folders)
