[project]
name = "agent-org-network"
version = "0.0.0"
description = "개인별 업무 에이전트 + 중앙 라우터 조직형 멀티에이전트 네트워크"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.138.0",
    "itsdangerous>=2.2.0",
    "mcp>=1.28.0",
    "pydantic>=2",
    "uvicorn[standard]>=0.49.0",
    "websockets>=16.0",
]

# 공급자 SDK = 선택 의존성(extra). 코어는 *어떤 공급자에도 종속되지 않는다*(ADR 0027 결정 1·11).
# owner는 자기 구독 공급자만 설치: pip install agent-org-network[claude-api]  (또는 후속 [codex]·[gemini])
# 미설치 공급자 어댑터는 그 공급자를 선택(AON_PROVIDER)했을 때만 import되므로 다른 공급자 owner엔 무영향.
[project.optional-dependencies]
claude-api = ["anthropic>=0.112.0"]
codex = ["openai>=2.0.0"]
# 후속(공급자 추가 시 대칭 확장): gemini = ["google-genai>=..."]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
    "pyright>=1.1",
    "httpx>=0.28.1",
    # 게이트 타입검사용 — 전 공급자 어댑터를 pyright로 검사하려 dev에만 둔다(런타임 코어 의존 아님).
    "anthropic>=0.112.0",
    "openai>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_org_network"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.pyright]
include = ["src", "tests"]
typeCheckingMode = "strict"
