[project]
name = "agent-org-network"
version = "0.0.0"
description = "개인별 업무 에이전트 + 중앙 라우터 조직형 멀티에이전트 네트워크"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.138.0",
    "itsdangerous>=2.2.0",
    "mcp>=1.28.0",
    "pydantic>=2",
    "uvicorn[standard]>=0.49.0",
    "websockets>=16.0",
]

# 공급자 SDK = 선택 의존성(extra). 코어는 *어떤 공급자에도 종속되지 않는다*(ADR 0027 결정 1·11).
# owner는 자기 구독 공급자만 설치: pip install agent-org-network[claude-api]  (또는 후속 [codex]·[gemini])
# 미설치 공급자 어댑터는 그 공급자를 선택(AON_PROVIDER)했을 때만 import되므로 다른 공급자 owner엔 무영향.
[project.optional-dependencies]
claude-api = ["anthropic>=0.112.0"]
codex = ["openai>=2.0.0"]
# 후속(공급자 추가 시 대칭 확장): gemini = ["google-genai>=..."]
# near-dup 임베딩(ADR 0032 OQ-4). owner측 로컬·온디맨드 단발 — fastembed(onnxruntime·
# tokenizers·numpy를 transitive로·torch 없음). 미설치 owner는 dedup이 무력(빈 후보)일 뿐
# 코어·다른 extra·기본 CI는 무영향(공급자 SDK extra 격리 패턴).
dedup = ["fastembed>=0.4.0"]
# 실 OIDC 검증(HttpOidcProvider·T8.3·ADR 0021). JWKS fetch·RS256 서명 검증·iss/aud/exp 체크를
# PyJWT+cryptography로 한다. 코어는 SSO를 FakeOidcProvider(결정론·게이트 내)로만 돌리므로 이
# extra 미설치여도 코어·게이트 무영향(지연 import·미설치 시 명확한 SystemExit 안내).
oidc = ["pyjwt[crypto]>=2.10.0"]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
    "pyright>=1.1",
    "httpx>=0.28.1",
    # 게이트 타입검사용 — 전 공급자 어댑터를 pyright로 검사하려 dev에만 둔다(런타임 코어 의존 아님).
    "anthropic>=0.112.0",
    "openai>=2.0.0",
    # dedup 임베딩 어댑터(provider_embed_fastembed)도 같은 정신 — pyright가 타입을 보게 dev에
    # 둔다(런타임 코어 의존 아님·실 사용은 dedup extra). 미설치 시 pyright가 fastembed 타입을
    # unknown으로 떨어뜨리지 않게 게이트 환경엔 항상 둔다.
    "fastembed>=0.4.0",
    # HttpOidcProvider(oidc extra) 타입검사·결정론 테스트용 — pyright가 jwt 타입을 보고
    # 결정론 테스트가 fixture fetcher로 실 서명을 검증하게 dev에 둔다(런타임 코어 의존 아님).
    "pyjwt[crypto]>=2.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_org_network"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "scale: 게이트 밖 실 스케일 데이터(registry/scale·okf_scale) 러너 — 미준비 시 skip",
]

[tool.ruff]
line-length = 100

[tool.pyright]
include = ["src", "tests"]
typeCheckingMode = "strict"
